fix: fix structure of movie_rec and tweets notebooks

--- a/MovieRecommendationSystem.ipynb
+++ b/MovieRecommendationSystem.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to create a model, that will recommend a user new movies, based on user's ratings on movies he already watched.\n",
+    "We want to create a model, that will recommend users new movies, based on their ratings on movies he already watched.\n",
     "\n",
     "Also it'll recommend new movies similar to movie X if you liked it."
    ]
