--- a/disasterTweets.ipynb
+++ b/disasterTweets.ipynb
@@ -297,6 +297,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data screening"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
