refactor: change tweetpredict module

--- a/disasterTweetsExamples.ipynb
+++ b/disasterTweetsExamples.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "from disaster_tweets.scripts.tweetPredict import predict"
+    "from disaster_tweets.scripts.tweetpredict import predict"
    ]
   },
   {
