feat: save ens_model

--- a/disaster_tweets.ipynb
+++ b/disaster_tweets.ipynb
@@ -3044,16 +3044,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MultinomialNB(alpha=0.5, fit_prior=False)"
+       "VotingClassifier(estimators=[('BNB', LogisticRegression(C=1, n_jobs=-1)),\n",
+       "                             ('MNB',\n",
+       "                              BernoulliNB(alpha=1, binarize=0,\n",
+       "                                          fit_prior=False)),\n",
+       "                             ('LogReg',\n",
+       "                              MultinomialNB(alpha=0.5, fit_prior=False))],\n",
+       "                 voting='soft')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3065,19 +3071,24 @@
     "BNB_clf = BernoulliNB(alpha = 1, binarize = 0, fit_prior = False)\n",
     "BNB_clf.fit(X_sparsed, Y)\n",
     "\n",
-    "MNB_clf_final = MultinomialNB(alpha = 0.5,fit_prior = False)\n",
-    "MNB_clf_final.fit(X_sparsed, Y)"
+    "MNB_clf = MultinomialNB(alpha = 0.5,fit_prior = False)\n",
+    "MNB_clf.fit(X_sparsed, Y)\n",
+    "\n",
+    "ens_clf = VotingClassifier(voting='soft', estimators = [('BNB', Log_clf), ('MNB', BNB_clf), \n",
+    "                                                       ('LogReg', MNB_clf)])\n",
+    "ens_clf.fit(X_sparsed, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "pickle.dump(Log_clf_final, open(r'disaster_tweets/models/LogReg_model.sav', 'wb'))\n",
     "pickle.dump(BNB_clf_final, open(r'disaster_tweets/models/BNB_model.sav', 'wb'))\n",
     "pickle.dump(MNB_clf_final, open(r'disaster_tweets/models/MNB_model.sav', 'wb'))\n",
+    "pickle.dump(MNB_clf_final, open(r'disaster_tweets/models/ens_model.sav', 'wb'))\n",
     "pickle.dump(vect, open(r'disaster_tweets/models/vectorizer.sav', 'wb'))"
    ]
   }
