feat: update disastertweets

--- a/disaster_tweets.ipynb
+++ b/disaster_tweets.ipynb
@@ -3035,16 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_sparsed_train = sparse.csr_matrix(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -3059,36 +3050,36 @@
        "                 voting='soft')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Log_clf = LogisticRegression(C = 1, penalty = 'l2', n_jobs=-1)\n",
-    "Log_clf.fit(X_sparsed, Y)\n",
+    "Log_clf.fit(X, Y)\n",
     "\n",
     "BNB_clf = BernoulliNB(alpha = 1, binarize = 0, fit_prior = False)\n",
-    "BNB_clf.fit(X_sparsed, Y)\n",
+    "BNB_clf.fit(X, Y)\n",
     "\n",
     "MNB_clf = MultinomialNB(alpha = 0.5,fit_prior = False)\n",
-    "MNB_clf.fit(X_sparsed, Y)\n",
+    "MNB_clf.fit(X, Y)\n",
     "\n",
     "ens_clf = VotingClassifier(voting='soft', estimators = [('BNB', Log_clf), ('MNB', BNB_clf), \n",
     "                                                       ('LogReg', MNB_clf)])\n",
-    "ens_clf.fit(X_sparsed, Y)"
+    "ens_clf.fit(X, Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(Log_clf_final, open(r'disaster_tweets/models/LogReg_model.sav', 'wb'))\n",
-    "pickle.dump(BNB_clf_final, open(r'disaster_tweets/models/BNB_model.sav', 'wb'))\n",
-    "pickle.dump(MNB_clf_final, open(r'disaster_tweets/models/MNB_model.sav', 'wb'))\n",
-    "pickle.dump(MNB_clf_final, open(r'disaster_tweets/models/ens_model.sav', 'wb'))\n",
+    "pickle.dump(Log_clf, open(r'disaster_tweets/models/LogReg_model.sav', 'wb'))\n",
+    "pickle.dump(BNB_clf, open(r'disaster_tweets/models/BNB_model.sav', 'wb'))\n",
+    "pickle.dump(MNB_clf, open(r'disaster_tweets/models/MNB_model.sav', 'wb'))\n",
+    "pickle.dump(ens_clf, open(r'disaster_tweets/models/ens_model.sav', 'wb'))\n",
     "pickle.dump(vect, open(r'disaster_tweets/models/vectorizer.sav', 'wb'))"
    ]
   }
